--- a/style.css
+++ b/style.css
@@ -1,128 +1,200 @@
-*{
-    border: 1px solid red;
+body {
+  border: 1px solid red;
+  margin: 0 auto;
+  
+  color: white;
+
+  font-family: "Roboto", sans-serif;
+}
+*{  
     margin: 0 auto;
-    background-color: #1f2937;
-    color: white;
-    
-    font-family: 'Roboto', sans-serif;
-}
-.header{
-    display: flex;
-   justify-items: center;
-    align-items: center;
-    height: 50px;
-   background-color: #1f2937;
-   margin-right: 0;
-   color:whitesmoke ;
-   margin-bottom: 30px;
-
-}
-#header-logo{
-    font-size: 24px;
-    color: #f9faf8;
 }
 
-.nav-list{
-    flex-direction: row;
-    display: flex;
-    justify-content: flex-end;
-    align-self: center;
-    margin-right: 0;
-    font-size: 18px;
-}
-.nav-item{
-    list-style: none;
-    padding: 19px;
-    margin-right: 5px;
-    color:#e5e7eb;
-     font-size:18px;
-
-}
-a{
-    color: aliceblue;
-    text-decoration:none;
-}
-.hero{
-    display: flex;
-    flex: 1;
-    margin-bottom: 30px;
-    padding: 5px;
-  justify-content: space-around;
-  gap: 2rem;
-  margin: 50px 150px 50px 150px;
+.header {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  height: 50px;
   background-color: #1f2937;
-  color:whitesmoke ;
-  
+  margin-right: 0;
+  color: whitesmoke;
+  padding-bottom: 50px;
+  outline-color: #1f2937;
+}
+#header-logo {
+  font-size: 24px;
+  color: #f9faf8;
+  outline-color: #1f2937;
 
 }
 
-.img-placeholder{
+.nav-list {
+  flex-direction: row;
+  display: flex;
+  justify-content: flex-end;
+  align-self: center;
+  margin-right: 0;
+  font-size: 18px;
+  outline-color: #1f2937;
+}
+.nav-item {
+  list-style: none;
+  padding: 19px;
+  margin-right: 5px;
+  color: #e5e7eb;
+  font-size: 18px;
+  outline-color: #1f2937;
+ 
+}
+a {
+  color: aliceblue;
+  text-decoration: none;
+
+}
+.hero {
+  display: flex;
+  flex: 1;
+  margin-bottom: 30px;
+  padding: 60px;
+  justify-content: space-around;
+  align-items: center;
+ 
+  background-color: #1f2937;
+  color: whitesmoke;
+  outline-color: #1f2937;
+}
+
+.img-placeholder {
+  display: flex;
+align-self: flex-end;
+border-radius: 0px;
+}
+img{
+    width: 500px;
+    height: 250px;
+    border-radius: 0%;
+}
+.hero-item {
+  color: #e5e7eb;
+  font-size: 18px;
+  margin-left: 100px;
+}
+#hero-btn {
+  border-radius: 5px;
+  background-color: #3882f6;
+  border: #3882f6;
+  width: 100px;
+  padding: 5px;
+  font-size: 18px;
+  margin-top: 10PX;
+}
+h1.hero-header {
+  display: flex;
+  align-self: flex-start;
+  margin-left: 0%;
+  flex-wrap: nowrap;
+  font-size: 48px;
+  color: #f9faf8;
+  margin-left: 100px;
+}
+.info {
+  background-color: whitesmoke;
+}
+
+.info-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: whitesmoke;
+}
+.info-box {
+  width: 250px;
+
+  margin: 20px;
+ 
+  box-sizing: border-box;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: whitesmoke;
+}
+.idk {
+  height: 150px;
+  width: 150px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 12px;
+  border: solid 4px #3882f6;
+}
+.info-text {
+  width: 150px;
+  font-size: small;
+  background-color: whitesmoke;
+  color: #1f2937;
+  margin: 20px auto;
+}
+
+#info-header {
+  text-align: center;
+  background-color: whitesmoke;
+  font-size: 36px;
+  color: #1f2937;
+  
+  padding: 60px;
+}
+.quote {
     display: flex;
-    width: 400px;
-    height: 200px;
-    
-    background-color: rgb(152, 152, 165);
+    flex-direction: column;
+    background-color: #E5E7EB;
+     
+  padding: 60px;
+}
+
+.quote p {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: 'Roboto', arial;
+}
+
+.quote b {
+    padding-bottom: 20px;
+    padding-right: 10px;
+    padding-left: 900px;
+    font-family: 'Roboto', arial;
+    text-align: right;
+    color: #1F2937;
+    font-size: 24px;
+}
+.signup-container{
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
     align-items: center;
-    
-color: beige;
-}
-.hero-item{
-color:#e5e7eb;
-font-size: 18px;
- 
-}
-#hero-btn{
-   border-radius: 3px;
-   background-color:#3882f6;
-   border: #3882f6;
-   width: 80px;
-   padding: 2px;
-   font-size: 18px;
-
-}
-h1.hero-header{
-    display: flex;
-    align-self: flex-start;
-    margin-left: 0%;
-    flex-wrap: nowrap;
-    font-size: 48px;
-    color: #f9faf8;
-}
-.info{
-
-    
-
-}
-
-.info-container{
- display: flex;
- justify-content: center;
- align-items: center;
- 
-
-}
-.info-box{
-    width:250px;
-   
-    
-    margin: 20px;
-    box-shadow: 0px 0px 20px rgb(0,0,0,0.05);
-    box-sizing: border-box;
-    padding: 20px;
     border-radius: 5px;
-    
+    border-color: none;
+    justify-content: flex-start;
+    background-color: #1a85ef;
+    color: #1F2937;
+    margin: 50px 200px;
+    flex-wrap: wrap;
+   
+}
+.sig-p{
+order:2
   
 }
-.idk{
-    height: 150px;
-    width: 150px;
-    background-color: aquamarine;
-    border-radius: 5px;
+.action{
+color: #f9faf8;
+align-self: flex-start;
+padding-top: 30px;
 
 }
-.info-text{
-    width:150px ;
-    font-size: small;
- 
+#signup-btn{
+align-self: center;
+width: 150px;
+border: 5px solid rgb(255, 255, 255);
+border-radius: 10px;
+background-color: #3882f6;
+color: #f9faf8;
 }
 
